[gd_scene load_steps=10 format=3 uid="uid://bu21suu50eed5"]

[ext_resource type="Texture2D" uid="uid://srsqval8jr1l" path="res://icon.svg" id="1_e3p1l"]
[ext_resource type="Script" uid="uid://3miwwkl1xlpw" path="res://rooms/room.gd" id="1_qefgp"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_pmtbo"]
data = PackedVector3Array(-1, -1.005, -0.99999994, -1, -1, -0.99999994, -1, -1, -0.995, -1, -1.005, -0.99999994, -1, -1, -0.995, -0.99999994, -0.99999994, 5.9903077e-06, -0.99999994, -0.99999994, 5.9903077e-06, -1, -1, -0.995, -1, -1, -0.995, -1, -1.005, -0.99999994, 0.99999994, -1.005, -1, -1, -1, -0.99999994, -0.995, -0.995, -0.995, 0.995, -0.995, -0.995, -0.995, -0.995, 0.995, -1, -1.005, -0.99999994, -0.99999994, -0.99999994, 5.9903077e-06, -0.99999994, -1.005, 1, -0.99999994, -1.005, 1, -0.99999994, -0.99999994, 5.9903077e-06, -0.99999994, -1, 0.995, -0.99999994, -0.99999994, 0.995, -0.99999994, -1, 0.995, -0.99999994, -0.99999994, 5.9903077e-06, -0.99999994, -1.005, 1, -0.99999994, -1, 0.995, -0.99999994, -0.99999994, 1, -1, -1.005, -0.99999994, -0.99999994, -1.005, 1, 1, -1.005, 0.99999994, -0.99999994, -1.005, 1, -0.99999994, -0.99999994, 1, 1, -1, 0.99999994, 0.99999994, -1.005, -1, 0.99999994, -0.99999994, -1, -1, -1, -0.99999994, -1, -1.005, -0.99999994, 1, -1.005, 0.99999994, 0.99999994, -1.005, -1, 0.99999994, -1.005, -1, 0.99999994, -1, -0.995, 0.99999994, -0.99999994, -1, 0.99999994, -1.005, -1, 0.99999994, -0.99999994, -5.9903077e-06, 0.99999994, -1, -0.995, 0.99999994, -1, -0.995, 0.99999994, -0.99999994, -5.9903077e-06, 0.99999994, -0.99999994, -0.995, 0.99999994, -1.005, -1, 1, -1.005, 0.99999994, 0.99999994, -0.99999994, -5.9903077e-06, -0.995, -0.995, 0.995, 0.995, -0.995, -0.995, 0.995, -0.995, 0.995, -0.99999994, -1.005, 1, 1, -1, 0.99999994, 1, -1.005, 0.99999994, 1, -1.005, 0.99999994, 1, -1, 0.995, 0.99999994, -0.99999994, -5.9903077e-06, 1, -1, 0.995, 1, -1, 0.995, 0.99999994, -0.99999994, -5.9903077e-06, 1, -1.005, 0.99999994, 1, -1, 0.99999994, 1, -1, 0.995, 1, -0.99999994, -1, 1, -0.99999994, -0.995, 1.005, -0.99999994, -1, 1, -0.99999994, -0.995, 0.99999994, -0.99999994, -0.995, 0.99999994, -0.99999994, -5.9903077e-06, 1.005, -0.99999994, -1, 1, -0.99999994, -0.995, 1.005, -1, 0.99999994, 1, -0.99999994, -1, 1.005, -0.99999994, -1, 1.005, 1, -0.99999994, 1.005, -0.99999994, -1, 1.005, -1, 0.99999994, 1.005, 1, -0.99999994, 0.995, 1, -0.995, 0.995, -0.995, 0.995, 0.995, -0.995, -0.995, 1, -0.99999994, -0.995, 0.99999994, -0.99999994, -5.9903077e-06, 1.005, -1, 0.99999994, 1, -1, 0.995, 0.99999994, -0.99999994, -5.9903077e-06, 1, -1, 0.995, 1, -1, 0.995, 1.005, -1, 0.99999994, 0.99999994, -0.99999994, -5.9903077e-06, 1, -1, 0.995, 1, -1, 0.99999994, 1.005, -1, 0.99999994, 1, -1, 0.99999994, 1, 0.99999994, 1, 1.005, -1, 0.99999994, 1, -0.99999994, -1, 1.005, 1, -0.99999994, 1, 1, -0.99999994, 1, 1, -0.99999994, 1.005, 1, -0.99999994, 1, 1, -0.995, 0.995, 1, -0.995, 1, 1, -0.995, 0.995, 0.99999994, 0.995, 1.005, 1, -0.99999994, 0.995, 0.99999994, 0.995, 1, 1, -0.995, 0.995, 1, -0.995, 0.995, 0.99999994, 0.995, 0.995, -0.995, 0.995, 1.005, -1, 0.99999994, 1.005, 0.99999994, 1, 1.005, 1, -0.99999994, 1.005, -1, 0.99999994, 1, 0.99999994, 1, 1.005, 0.99999994, 1, 1.005, 1, -0.99999994, 1, 0.99999994, 0.995, 0.995, 0.99999994, 0.995, 1.005, 1, -0.99999994, 1.005, 0.99999994, 1, 1, 0.99999994, 0.995, 1, 0.99999994, 0.995, 1.005, 0.99999994, 1, 1, 0.99999994, 1, -1.005, -1, -0.99999994, -1, -1, -0.995, -1, -1, -0.99999994, -1.005, -1, -0.99999994, -0.99999994, -0.99999994, 5.9903077e-06, -1, -1, -0.995, -1, -1, -0.995, -0.99999994, -0.99999994, 5.9903077e-06, -1, -1, -0.995, -1.005, -1, -0.99999994, -1, -0.99999994, 0.995, -0.99999994, -0.99999994, 5.9903077e-06, -1.005, -1, -0.99999994, -1, -1, -0.99999994, -1, 0.99999994, -1, -1.005, -1, -0.99999994, -1.005, -0.99999994, 1, -1, -0.99999994, 0.995, -1, -0.99999994, 0.995, -0.99999994, -0.99999994, 0.995, -0.99999994, -0.99999994, 5.9903077e-06, -1, -0.99999994, 0.995, -1.005, -0.99999994, 1, -1, -0.99999994, 1, -1.005, -1, -0.99999994, -1.005, 1, 0.99999994, -1.005, -0.99999994, 1, -0.995, 1, 0.995, -0.995, -0.995, -0.995, -0.995, -0.995, 0.995, -1.005, -0.99999994, 1, -1.005, 1, 0.99999994, -1, -0.99999994, 1, -1.005, -1, -0.99999994, -1, 0.99999994, -1, -1.005, 0.99999994, -1, -1.005, -1, -0.99999994, -1.005, 0.99999994, -1, -1.005, 1, 0.99999994, -0.995, 0.99999994, -0.995, -0.995, -0.995, -0.995, -0.995, 1, 0.995, -1.005, 0.99999994, -1, -1, 0.99999994, -1, -1, 0.99999994, -0.995, -1.005, 0.99999994, -1, -1, 0.99999994, -0.995, -1.005, 1, 0.99999994, -1, 0.99999994, -0.995, -0.995, 0.99999994, -0.995, -1.005, 1, 0.99999994, -1, -0.99999994, 1, -1.005, 1, 0.99999994, -1, 1, 0.99999994, -0.995, 0.99999994, -0.995, -1, 1, 0.995, -1.005, 1, 0.99999994, -0.995, 0.99999994, -0.995, -0.995, 1, 0.995, -1, 1, 0.995, -1, 1, 0.995, -1, 1, 0.99999994, -1.005, 1, 0.99999994, -1, -0.99999994, 0.995, -1, -1, 0.995, -0.99999994, -0.99999994, 0.995, -1, -1, 0.995, -0.99999994, -1, 0.995, -0.99999994, -0.99999994, 0.995, -1, -1, 0.995, -1, -0.99999994, 0.995, -1, -0.99999994, 1, -1, -1, 0.995, -1, -0.99999994, 1, -0.99999994, -1, 0.995, -0.99999994, -1, 0.995, -1, -0.99999994, 1, -0.99999994, -0.99999994, 1, -1, -0.99999994, 1, -1, -1, 1.005, -0.99999994, -0.99999994, 1, -1, -0.99999994, 1, -1, 1, 1.005, -1, -1, 1.005, -1, -1, 1.005, 1, -1, 0.99999994, -0.99999994, -0.99999994, 1, -1, -0.99999994, 1, -1, 1, 0.99999994, -1, 1, 1.005, -1, 1, 0.995, -1, 1, 0.99999994, -1, 1, 0.995, -1, 1, 0.995, -1, 1, 0.995, -0.995, 1, 0.995, -1, -1, 1.005, -1, 1, 1.005, 1, 1, 1.005, -0.995, 1, 0.995, -0.995, -0.995, 0.995, 0.995, 0.99999994, 0.995, -1, 1, 0.995, 1, 1, 1.005, -1, 1, 0.99999994, -1, 1, 0.995, -0.995, 1, 0.995, 1, 1, 1.005, -1, 1, 0.99999994, 1, 1, 1.005, -1, 1, 1.005, -1, -1, 1.005, 1, -1, 1.005, 1, -1, 0.99999994, -1, -1, 1.005, 1, 1, 1.005, 1, -1, 1.005, 0.995, 0.99999994, 0.995, -0.995, -0.995, 0.995, 0.995, -0.995, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.995, 1, -1, 0.99999994, 1, -1, 0.995, 1, -1, 0.99999994, 1, -1, 0.995, 1, -1, 0.99999994, 1, -1, 1.005, 1, 0.99999994, 1, -0.995, 1, 0.995, 0.995, 0.99999994, 0.995, 1, 1, 1.005, 1, -1, 1.005, 1, 1, 1.005, 1, 0.99999994, 1, 0.995, 0.99999994, 0.995, 1, 0.99999994, 0.995, 1, 1, 0.995, 0.995, 0.99999994, 0.995, 1, 1, 0.995, 1, 0.99999994, 1, 1, 1, 0.995, 1, 0.99999994, 0.995, 1, 0.99999994, 1, 0.995, 0.99999994, 0.995, 1, 0.99999994, 1, 1, 1, 1.005, -1, -1, -0.99999994, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.99999994, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -0.995, -1, -1, -1.005, -1, 0.99999994, -1, -1, -1, -0.99999994, -1, -1, -1.005, -1, -1, -0.99999994, 1, -1, -1.005, -1, -1, -1.005, 1, -1, -1.005, -1, 1, -1.005, -0.995, 0.99999994, -0.995, 0.995, -0.995, -0.995, -0.995, -0.995, -0.995, -1, -1, -1.005, -1, 1, -1.005, -1, 0.99999994, -1, -1, 0.99999994, -1, -1, 1, -0.995, -1, 0.99999994, -0.995, -1, 0.99999994, -1, -0.995, 0.99999994, -0.995, -1, 1, -0.995, -1, 1, -0.995, -0.995, 0.99999994, -0.995, -1, 0.99999994, -0.995, -1, 1, -1.005, 1, 1, -0.995, -1, 0.99999994, -1, -1, 0.99999994, -1, 0.995, 1, -0.995, -0.995, 0.99999994, -0.995, 1, -1, -1.005, -1, -1, -0.99999994, 0.99999994, -0.99999994, -1, 1, -1, -1.005, 0.99999994, -0.99999994, -1, 1, -0.99999994, -1, 1, -0.99999994, -1, 0.99999994, -0.99999994, -1, 0.99999994, -1, -0.995, 1, -1, -0.995, 1, -0.99999994, -1, 0.99999994, -1, -0.995, 1, -0.99999994, -1, 1, -1, -0.995, 1, -0.99999994, -0.995, 1, -0.99999994, -0.995, 1, -1, -0.995, 0.99999994, -0.99999994, -0.995, 1, -1, -0.995, 0.99999994, -1, -0.995, 0.99999994, -0.99999994, -0.995, 1, -1, -1.005, 1, -0.99999994, -1, 1, 1, -1.005, -1, 1, -1.005, 1, -1, -1.005, 1, 1, -1.005, -0.995, 0.99999994, -0.995, 0.995, 1, -0.995, 0.995, -0.995, -0.995, -1, 1, -1.005, 1, 1, -1.005, 1, 1, -0.99999994, -1, 1, -1.005, 1, 1, -0.99999994, 1, 1, -0.995, -1, 0.99999994, -1, 1, 1, -0.995, 0.995, 1, -0.995, 1, -0.99999994, -1, 1, 1, -0.99999994, 1, 1, -1.005, 0.995, 1, -0.995, 1, 1, -0.995, 1, 1, -0.995, 1, 1, -0.99999994, 1, 1, -0.995, 1, 1, -0.995)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_trxi4"]
shading_mode = 0
albedo_texture = ExtResource("1_e3p1l")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nyat4"]
shading_mode = 0
albedo_texture = ExtResource("1_e3p1l")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2c4ag"]
shading_mode = 0
albedo_texture = ExtResource("1_e3p1l")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5skio"]
shading_mode = 0
albedo_texture = ExtResource("1_e3p1l")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_swjo3"]
shading_mode = 0
albedo_texture = ExtResource("1_e3p1l")

[sub_resource type="BoxShape3D" id="BoxShape3D_ya37f"]
size = Vector3(2, 2, 2)

[node name="Room2" type="Node3D"]
script = ExtResource("1_qefgp")
door1_offset = null
door2_offset = null
door3_offset = null

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_pmtbo")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]

[node name="floor" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, -1, 0)
size = Vector3(2, 0.01, 2)
material = SubResource("StandardMaterial3D_trxi4")

[node name="wall1" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 1, 0, 0)
size = Vector3(0.01, 2, 2)
material = SubResource("StandardMaterial3D_nyat4")

[node name="wall2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -1, 0, 0)
size = Vector3(0.01, 2, 2)
material = SubResource("StandardMaterial3D_2c4ag")

[node name="wall3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
visible = false
size = Vector3(2, 2, 0.01)
material = SubResource("StandardMaterial3D_5skio")

[node name="wall4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
size = Vector3(2, 2, 0.01)
material = SubResource("StandardMaterial3D_swjo3")

[node name="ceiling" type="CSGBox3D" parent="CSGCombiner3D"]

[node name="door1" type="CSGBox3D" parent="CSGCombiner3D"]
visible = false
operation = 2
size = Vector3(1.1, 1.5, 0.1)

[node name="door2" type="CSGBox3D" parent="CSGCombiner3D"]
visible = false
operation = 2
size = Vector3(1.1, 1.5, 0.1)

[node name="door3" type="CSGBox3D" parent="CSGCombiner3D"]
visible = false
operation = 2
size = Vector3(1.1, 1.5, 0.1)

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ya37f")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
